update navbar to prevent overlaps

--- a/client/autopost/src/App.css
+++ b/client/autopost/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .home-page {
-  margin-top: 3%;
+  padding-top: 3rem;
 }
 
 .registration-page {
@@ -372,6 +372,7 @@
   width: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-shadow: 1px 1px 2px black;
+  height: 3rem;
 }
 
 .navbar ul {
